; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_wql.tab.c_expr_ival.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_wql.tab.c_expr_ival.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.expr = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.parser = type { i32 }

@EXPR_IVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.expr* (%struct.parser*, i32)* @expr_ival to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.expr* @expr_ival(%struct.parser* %0, i32 %1) #0 {
  %3 = alloca %struct.parser*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.expr*, align 8
  store %struct.parser* %0, %struct.parser** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.parser*, %struct.parser** %3, align 8
  %7 = call %struct.expr* @alloc_mem(%struct.parser* %6, i32 8)
  store %struct.expr* %7, %struct.expr** %5, align 8
  %8 = load %struct.expr*, %struct.expr** %5, align 8
  %9 = icmp ne %struct.expr* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load i32, i32* @EXPR_IVAL, align 4
  %12 = load %struct.expr*, %struct.expr** %5, align 8
  %13 = getelementptr inbounds %struct.expr, %struct.expr* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.expr*, %struct.expr** %5, align 8
  %16 = getelementptr inbounds %struct.expr, %struct.expr* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  store i32 %14, i32* %17, align 4
  br label %18

18:                                               ; preds = %10, %2
  %19 = load %struct.expr*, %struct.expr** %5, align 8
  ret %struct.expr* %19
}

declare dso_local %struct.expr* @alloc_mem(%struct.parser*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
